Correct link spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,7 +25,7 @@ tr.sidebar {
     padding: 0 20px;
 }
 
-.contacts a {
+.contacts ul li a {
     margin-left: 5px;
 }
 
